--- a/pandas/templates/page3.html
+++ b/pandas/templates/page3.html
@@ -5,7 +5,7 @@
     <form name="frm" class="col-4 mb-3">
         <div class="input-group">
             <input name="query" class="form-control" placeholder="이름">
-            <button class="btn btn-dark">검색</button>
+            <button class="btn btn-dark" type="submit">검색</button>
         </div>
     </form>
     <div id="div_list"></div>
